fixed margins for left-side on mobile

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
         visibility: hidden;
     }
 
+    #left-side {
+        margin: auto auto auto auto !important;
+    }
+
 }
 
 html {
